--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
-include readme.md
+include README.rst
 
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
+recursive-include docs *.rst conf.py Makefile make.bat
